css/style.css
.container{
    height: 1500px;
    width: 55%;
    margin: 0 auto;
}
#header-formatting{
    background-image: url(../img/pattern.png);
    background-repeat: repeat;
    background-size: 230px;
    background-position: top right;
    background-color: #4EA0FF;
}
#logo-formatting{
    width: 20%;
    display: inline-block;
    margin-top: 18px;
}
#title-formatting{
    margin-top: 10px;
    margin-bottom:0 ;
}
#author-text-formatting{
    margin-top: 0;
    margin-bottom: 10px;
    color: grey;
}
.link-formatting{
    text-decoration: none;
    color: #35B0EA;
}
#img-container{
    width: 100%;
}
#image-1-formatting{
    width: 52%;
}
#image-2-formatting{
    width: 45%;
}
#photographers-text-formatting{
    margin-top: 5px;
    font-size: 10px;
}
.highlighted-text{
    background-color: yellow;
}
#head-row-formatting{
    background-color: #20A9E5;
    color: white;
}
.special-row-formatting{
    background-color: #B1E5F2;
}
#bottom-text-style{
    color: grey;
}
#suggestion-1{
    background-image: url(../img/monitor.jpg);
    background-position: center;
    height: 200px;
    width: 300px;
    color: white;
    padding: 5px;
}
#suggestion-2{
    background-image: url(../img/graph.jpg);
    background-position: center;
    height: 200px;
    width: 300px;
    color: white;
    padding: 5px;
}

